fix: added a gap to the wokPan class

--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,8 @@ button:hover {
     }
 
     figure {
-        display: flex;   
+        display: flex;
+        gap: 16px;  
     }
 
     img {
